fix z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -144,7 +144,7 @@ button.link {
 
 .loading-box {
   position: fixed;
-  z-index: 99999;
+  z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
